CHANGES
=======

0.0.8
-----

* Add project add-update-delete example
* Add get test support
* Add project POST support
* Add milestone POST support

0.0.7
-----

* Update README.rst
* Replace \`client\_api\` with \`client.api\`
* Update Milestone object model
* Add milestones
* Fix typos and update doc strings

0.0.6
-----

* Add get templates support

0.0.5
-----

* Add statuses support
* Add case type support
* Add support for properties

0.0.4
-----

* Add User support

0.0.3
-----

* Add get\_project support and bug fixes
* Update encrypted deploy password

0.0.2
-----

* Add Client, API, and Sessions
* Add project model and tests
* Add method support for singledispatch
* Update docstrings and help() messages
* Update README copy
* Add credential setting logic
* Add API paths to constants file
* Add initial project structure
* Initial commit