@@ -111,3 +111,5 @@ MILESTONE_ADD_FIELDS = (NAME, DESCRIPTION, DUE_ON, PARENT_ID, START_ON)
 MILESTONE_UPDATE_FIELDS = MILESTONE_ADD_FIELDS + (IS_COMPLETED, IS_STARTED, START_ON)
 PROJECT_ADD_FIELDS = (NAME, ANNOUNCEMENT, SHOW_ANNOUNCEMENT, SUITE_MODE)
 PROJECT_UPDATE_FIELDS = PROJECT_ADD_FIELDS + (IS_COMPLETED, )
+SUITE_ADD_FIELDS = (NAME, DESCRIPTION)
+SUITE_UPDATE_FIELDS = PROJECT_ADD_FIELDS + (IS_COMPLETED, )
