@@ -5,9 +5,10 @@ from .priority import Priority
 from .project import Project
 from .run import Run
 from .status import Status
+from .suite import Suite
 from .template import Template
 from .test import Test
 from .user import User
 
 __all__ = ['Case', 'CaseType', 'Milestone', 'Priority', 'Project', 'Run', 'Status',
-           'SubMilestone', 'Template', 'Test', 'User']
+           'SubMilestone', 'Suite', 'Template', 'Test', 'User']
