@@ -7,8 +7,6 @@ from .model_base import ModelBase
 from .posters import Addable, Deleteable, Updatable
 from .project import Project
 
-NAME = 'name'
-
 
 class MilestoneBase(Addable, Deleteable, Updatable, ModelBase):
     ADDABLE_FIELDS = const.MILESTONE_ADD_FIELDS
